--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,121 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body,
+html {
+  height: 100%;
+  font-family: Inter, sans-serif;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+}
+
+.lateral {
+  width: 20vw;
+  height: 100%;
+  background-color: #fbfbfb;
+  border-right: 1px solid #e8e8e8;
+}
+
+.lateral-header {
+  display: flex;
+  align-items: center; /* Alinea verticalmente el SVG y el h1 */
+  padding-left: 20px; /* Agrega padding a la izquierda */
+  height: 76px;
+}
+
+.lateral-header h1 {
+  margin-left: 10px; /* Agrega espacio entre el SVG y el h1 */
+}
+
+.principal .titulo,
+.principal nav,
+.principal .contenido {
+  background-color: #ffffff;
+}
+
+.principal .titulo {
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.principal {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  height: 100%;
+}
+
+.titulo {
+  height: 76px;
+
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  height: 44px;
+
+  border-bottom: 1px solid #e8e8e8;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+  margin-right: 30px;
+  font-weight: 400;
+}
+
+nav a:last-child {
+  margin-right: 0;
+}
+
+.contenido {
+  flex: 1;
+}
+
+.btn-nuevo {
+  margin-top: 25px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+  border-radius: 12px;
+  background-color: #fff;
+  border: none;
+  min-width: 190px;
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+#nuevo {
+  margin-right: 16px;
+  margin-left: 10px;
+}
+
+.menu-lateral {
+  padding-left: 20px;
+}
+
+.divider {
+  width: calc(100% - 40px);
+  margin: 20px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
