--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav a:last-child {
   background-color: #fff;
   border: none;
   min-width: 190px;
-  display: flex;
+  display: none;
   flex-direction: row;
   align-items: center;
   font-size: 18px;
@@ -137,7 +137,7 @@ nav a:last-child {
 
 .divider {
   width: calc(100% - 40px);
-  margin: 30px 20px;
+  margin: 24px 20px;
   height: 1px;
   background: #d9d9d9;
 }
@@ -156,10 +156,6 @@ nav a:last-child {
   margin-bottom: 15px; /* Espacio entre enlaces */
 }
 
-.menu-link:visited {
-  color: #8e8e8e;
-}
-
 .menu-link svg {
   margin-right: 10px; /* Espacio entre el SVG y el texto */
 }
@@ -172,10 +168,11 @@ nav a:last-child {
 .a-a-menu {
   height: 18px;
   margin-right: 10px;
+  color: #8e8e8e;
 }
 
 .menu-a {
   font-size: 18px;
   font-weight: 600;
+  color: #8e8e8e;
 }
-
