--- a/styles.css
+++ b/styles.css
@@ -225,11 +225,32 @@ nav a:last-child {
 
 .card-task {
   background-color: white;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.25);
   border-radius: 12px;
   border: 1px solid #e8e8e8;
   padding: 10px 10px 20px 10px;
+  width: 328px;
+}
+
+.tareas-all {
+  width: 328px;
+  border-radius: 12px;
+  border: 1px solid #e8e8e8;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.25);
+  padding: 5px 10px 5px 10px;
+  margin: 10px 10px 0 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.contenido {
+  display: none;
+}
+
+#tareas {
+  display: flex; /* Mostrar el contenido "Tareas" inicialmente */
 }
 
 .priority-indicator {
@@ -241,6 +262,8 @@ nav a:last-child {
   align-items: center;
   font-size: 12px;
   border-radius: 4px;
+  font-weight: 600;
+  margin-right: 10px;
 }
 
 h3 {
@@ -269,6 +292,7 @@ h3 {
 }
 
 .task-details {
+  margin-top: 10px;
   display: flex;
   align-items: center; /* Alinea verticalmente los íconos y el texto */
 }
